made changes to the cmakelist file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.10.2 FATAL_ERROR)
 
+# Set the custom installation path
+# set(CMAKE_PREFIX_PATH "/custom/install/path" CACHE PATH "Custom install path")
+
+
 find_package(ignition-cmake2 REQUIRED)
 
 project(uwb_plugin_test_1)
@@ -9,6 +13,17 @@ set(IGN_PLUGIN_VER ${ignition-plugin1_VERSION_MAJOR})
 
 ign_find_package(ignition-gazebo6 REQUIRED)
 set(IGN_GAZEBO_VER ${ignition-gazebo6_VERSION_MAJOR})
+
+
+
+# Find the custom Ignition Rendering library
+find_package(ignition-rendering6 6.6.3 REQUIRED)
+# Print the paths of the found package
+if (ignition-rendering6_FOUND)
+    message(STATUS "Found Ignition Rendering library:")
+    message(STATUS "  Include dir: ${ignition-rendering6_INCLUDE_DIRS}")
+    message(STATUS "  Libraries: ${ignition-rendering6_LIBRARIES}")
+endif()
 
 
 # find dependencies
